[gd_scene load_steps=2 format=2]

[ext_resource path="res://transitionScreens/ScoreScreen.gd" type="Script" id=1]

[node name="ScoreScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 322.0
margin_bottom = 182.0
color = Color( 0, 0, 0, 1 )

[node name="ScoreText" type="Label" parent="."]
margin_left = 103.0
margin_top = 39.0
margin_right = 216.0
margin_bottom = 65.0

[node name="TimeText" type="Label" parent="."]
margin_left = 103.0
margin_top = 78.0
margin_right = 216.0
margin_bottom = 106.0

[node name="Button" type="Button" parent="."]
margin_left = 246.0
margin_top = 151.0
margin_right = 318.0
margin_bottom = 178.0
text = "Next"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
